fixed white spaces

--- a/src/pages/KnowMore/knowmore.css
+++ b/src/pages/KnowMore/knowmore.css
@@ -1,3 +1,16 @@
+.know-more-container{
+    height: max-content;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    padding: 10rem 2rem 2rem 2rem;
+}
+@media screen and (max-width: 700px){
+    .know-more-container{
+        flex-direction: column;
+        align-items: center;
+    }
+}
 .knowMore-content{
     max-width: 70%;
     color: lightgrey;
