--- a/src/pages/timerPage/timerPage.css
+++ b/src/pages/timerPage/timerPage.css
@@ -1,7 +1,7 @@
 .timer-page-container{
     display: flex;
     align-items: flex-start;
-    /* height: 100vh; */
+    height: 100vh;
     justify-content: space-evenly;
     padding: 10rem 2rem 2rem 2rem;
 }
@@ -9,5 +9,6 @@
     .timer-page-container{
         flex-direction: column;
         align-items: center;
+        padding-bottom: 4rem;
     }
 }
